// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<TutorialEditor /> renders the main component with the preview closed 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container-0-3-1"
      >
        <div
          class="actions-0-3-4"
        >
          <span
            class="label-0-3-2"
            style="margin-right: auto;"
          >
            Tutorial Editor
          </span>
          <div
            class="hsbutton secondary icon borderless"
            data-testid="preview-button"
          >
            <img
              src="eye-circle.svg"
            />
          </div>
          <div
            class="hsbutton secondary icon borderless"
            data-testid="settings-button"
          >
            <img
              src="settings.svg"
            />
          </div>
        </div>
        <span
          class="label-0-3-2"
        >
          Clip Content:
        </span>
        <div
          class="info-0-3-3"
          style="flex: 1 1 0%;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <textarea
              class="scrollbar"
              rows="30"
            >
              Hello
            </textarea>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container-0-3-1"
    >
      <div
        class="actions-0-3-4"
      >
        <span
          class="label-0-3-2"
          style="margin-right: auto;"
        >
          Tutorial Editor
        </span>
        <div
          class="hsbutton secondary icon borderless"
          data-testid="preview-button"
        >
          <img
            src="eye-circle.svg"
          />
        </div>
        <div
          class="hsbutton secondary icon borderless"
          data-testid="settings-button"
        >
          <img
            src="settings.svg"
          />
        </div>
      </div>
      <span
        class="label-0-3-2"
      >
        Clip Content:
      </span>
      <div
        class="info-0-3-3"
        style="flex: 1 1 0%;"
      >
        <div
          style="flex: 1 1 0%;"
        >
          <textarea
            class="scrollbar"
            rows="30"
          >
            Hello
          </textarea>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<TutorialEditor /> renders the main component with the preview open 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container-0-3-1"
      >
        <div
          class="actions-0-3-4"
        >
          <span
            class="label-0-3-2"
            style="margin-right: auto;"
          >
            Tutorial Editor
          </span>
          <div
            class="hsbutton secondary icon borderless"
            data-testid="preview-button"
          >
            <img
              src="eye-closed.svg"
            />
          </div>
          <div
            class="hsbutton secondary icon borderless"
            data-testid="settings-button"
          >
            <img
              src="settings.svg"
            />
          </div>
        </div>
        <span
          class="label-0-3-2"
        >
          Clip Content:
        </span>
        <div
          class="info-0-3-3"
          style="flex: 1 1 0%;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <textarea
              class="scrollbar"
              rows="30"
            >
              Hello
            </textarea>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container-0-3-1"
    >
      <div
        class="actions-0-3-4"
      >
        <span
          class="label-0-3-2"
          style="margin-right: auto;"
        >
          Tutorial Editor
        </span>
        <div
          class="hsbutton secondary icon borderless"
          data-testid="preview-button"
        >
          <img
            src="eye-closed.svg"
          />
        </div>
        <div
          class="hsbutton secondary icon borderless"
          data-testid="settings-button"
        >
          <img
            src="settings.svg"
          />
        </div>
      </div>
      <span
        class="label-0-3-2"
      >
        Clip Content:
      </span>
      <div
        class="info-0-3-3"
        style="flex: 1 1 0%;"
      >
        <div
          style="flex: 1 1 0%;"
        >
          <textarea
            class="scrollbar"
            rows="30"
          >
            Hello
          </textarea>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
